# custom-file-manager

./: .gitignore  README.md
src/: CMakeLists.txt  components.h  func.h  handlers.h  main.c  main.h  panels.h  snake.c  snake.h  ui.h  ui_builder.c  ui_builder.h  utils.c  utils.h
